--- a/global.style.css
+++ b/global.style.css
@@ -1,7 +1,21 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
 
 body {
     background:#E6E4D4;
-    font-size: 16px;
+    font-size: 14px;
     font-family: 'Montserrat', sans-serif;
+}
+
+.baseColor {
+    background:#E6E4D4;
+}
+
+.navbar {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+footer {
+    padding-left: 10%;
+    padding-right: 10%;
 }
