--- a/global.style.css
+++ b/global.style.css
@@ -4,6 +4,7 @@ body {
     background:#E6E4D4;
     font-size: 14px;
     font-family: 'Montserrat', sans-serif;
+    color: black;
 }
 
 .baseColor {
@@ -19,3 +20,80 @@ footer {
     padding-left: 10%;
     padding-right: 10%;
 }
+
+.content {
+    position: relative;
+    margin: auto;
+    overflow: hidden;
+  }
+
+  .content .content-overlay {
+    background: rgba(189,195,199,0.5);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -moz-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s;
+  }
+
+  .content:hover .content-overlay{
+    opacity: 1;
+  }
+
+  .content-details {
+    position: absolute;
+    text-align: center;
+    padding-left: 1em;
+    padding-right: 1em;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+
+  .content:hover .content-details{
+    top: 50%;
+    left: 50%;
+    opacity: 1;
+  }
+
+  .content-details h3{
+    color: #fff;
+    font-weight: 700;
+    letter-spacing: 0.15em;
+    margin-bottom: 0.5em;
+    text-transform: uppercase;
+    font-size: x-large;
+  }
+
+  .content-details{
+    color: #fff;
+  }
+
+  .fadeIn-bottom{
+    top: 80%;
+  }
+
+  .fadeIn-top{
+    top: 20%;
+  }
+
+  .fadeIn-left{
+    left: 20%;
+  }
+
+  .fadeIn-right{
+    left: 80%;
+  }
