Updated about and resume page

--- a/global.style.css
+++ b/global.style.css
@@ -5,6 +5,7 @@ body {
     font-size: 14px;
     font-family: 'Montserrat', sans-serif;
     color: black;
+    font-weight: 500;
 }
 
 .baseColor {
