--- a/global.style.css
+++ b/global.style.css
@@ -5,7 +5,7 @@ body {
   font-size: 14px;
   font-family: 'Montserrat', sans-serif;
   color: black;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .baseColor {
@@ -32,6 +32,10 @@ footer {
   background-color: black;
   font-size: 17px;
   border-radius: 35px;
+}
+
+.navbar-end {
+  width: 60%;
 }
 
 .content {
