--- a/global.style.css
+++ b/global.style.css
@@ -2,7 +2,8 @@
 
 body {
   background:#E6E4D4;
-  font-size: 14px;
+  font-size: 1rem; /* 16px */
+  line-height: 1.5rem; /* 24px */
   font-family: 'Montserrat', sans-serif;
   color: black;
   font-weight: 400;
