Updated logo sizes in resume page

--- a/global.style.css
+++ b/global.style.css
@@ -35,8 +35,12 @@ footer {
   border-radius: 35px;
 }
 
+.btn-neutral:hover {
+  background-color: black;
+}
+
 .navbar-end {
-  width: 90%;
+  width: 95%;
 }
 
 .content {
