--- a/carousel.style.css
+++ b/carousel.style.css
@@ -51,7 +51,7 @@
     cursor: pointer;
     position: absolute;
     top: 50%;
-    width: auto;
+    width: 5%;
     margin-top: -22px;
     padding: 16px;
     color: white;
@@ -60,15 +60,11 @@
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: #75A801;
 }
 
 /* Position the "next button" to the right */
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-    background-color: #75A801;
 }
