--- a/carousel.style.css
+++ b/carousel.style.css
@@ -7,11 +7,6 @@
   margin: auto;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
@@ -67,4 +62,42 @@
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
+}
+
+/* SLIDESHOW FOR GRAPHIC PAGE */
+
+.slideshow-container-graphic {
+    position: relative;
+}
+
+/* Next & previous buttons */
+.prev-graphic, .next-graphic {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next-graphic {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev-graphic:hover, .next-graphic:hover {
+    background-color: rgba(117,168,1,0.8);
+}
+
+/* Hide the images by default */
+.mySlides-goo, .mySlides-ffafFrames, .mySlides-ffafAd, .mySlides-dune, .mySlides-llgAds, .mySlides-timberline {
+    display: none;
 }
